--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -14,9 +14,7 @@
         <Compile Include="services\city.kdmid.ru\web\pages\ConfirmationPage.fs"/>
         <Compile Include="services\city.kdmid.ru\core\Order.fs"/>
         <Compile Include="services\info.midpass.ru\Domain.fs"/>
-        <Compile Include="Domain.fs"/>
-        <Compile Include="Mapper.fs"/>
-        <Compile Include="Settings.fs"/>
+        <Compile Include="domain\Domain.Service.fs" />
         <Compile Include="API.fs"/>
     </ItemGroup>
 
