--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\submodules\fsharp-web\src\fsharp-web.fsproj" />
         <ProjectReference Include="..\..\embassy-access-core\embassy-access-core.fsproj"/>
     </ItemGroup>
 
