--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -5,7 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="services\city.kdmid.ru\Domain.fs"/>
+        <Compile Include="services\city.kdmid.ru\domain\Domain.Constants.fs" />
+        <Compile Include="services\city.kdmid.ru\domain\Domain.Dependencies.fs" />
+        <Compile Include="services\city.kdmid.ru\domain\Domain.Service.fs" />
+        <Compile Include="services\city.kdmid.ru\domain\Domain.Order.fs" />
+        <Compile Include="services\city.kdmid.ru\domain\Domain.Payload.fs" />
         <Compile Include="services\city.kdmid.ru\web\Http.fs"/>
         <Compile Include="services\city.kdmid.ru\web\Html.fs"/>
         <Compile Include="services\city.kdmid.ru\web\pages\InitialPage.fs"/>
@@ -13,8 +17,8 @@
         <Compile Include="services\city.kdmid.ru\web\pages\AppointmentsPage.fs"/>
         <Compile Include="services\city.kdmid.ru\web\pages\ConfirmationPage.fs"/>
         <Compile Include="services\city.kdmid.ru\core\Order.fs"/>
-        <Compile Include="services\info.midpass.ru\Domain.fs"/>
-        <Compile Include="domain\Domain.Service.fs" />
+        <Compile Include="services\info.midpass.ru\Domain.Service.fs" />
+        <Compile Include="domain\Service.fs" />
         <Compile Include="API.fs"/>
     </ItemGroup>
 
