--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -9,15 +9,15 @@
         <Compile Include="domain\Chat.fs" />
         <Compile Include="data_access\Chat.fs" />
         <Compile Include="dependencies\Persistence.fs" />
-        <Compile Include="dependencies\Consumer.fs" />
-        <Compile Include="dependencies\Producer.fs" />
-        <Compile Include="dependencies\CommandHandler.Core.fs" />
-        <Compile Include="dependencies\CommandHandler.Russian.fs" />
-        <Compile Include="Command.fs"/>
-        <Compile Include="embassy_handlers\CommandHandler.Russian.fs" />
-        <Compile Include="CommandHandler.fs" />
-        <Compile Include="Consumer.fs"/>
-        <Compile Include="Producer.fs"/>
+        <Compile Include="dependencies\consumer\Consumer.fs" />
+        <Compile Include="dependencies\consumer\Russian.fs" />
+        <Compile Include="dependencies\producer\Producer.fs" />
+        <Compile Include="Command.fs" />
+        <Compile Include="handlers\consumer\Russian.fs" />
+        <Compile Include="handlers\consumer\Consumer.fs" />
+        <Compile Include="handlers\producer\Producer.fs" />
+        <Compile Include="Consumer.fs" />
+        <Compile Include="Producer.fs" />
     </ItemGroup>
 
     <ItemGroup>
