Refactor domain modules: rename ServiceGraph to ServiceNode, Service to RequestService, and EmbassyGraph to EmbassyNode; update references and types across the project

--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -3,25 +3,25 @@
         <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="domain\EmbassyGraph.fs" />
+        <Compile Include="domain\EmbassyNode.fs" />
         <Compile Include="domain\Confirmation.fs" />
         <Compile Include="domain\Appointment.fs" />
         <Compile Include="domain\ConfirmationOption.fs" />
         <Compile Include="domain\ConfirmationState.fs" />
         <Compile Include="domain\ProcessState.fs" />
-        <Compile Include="domain\Service.fs" />
-        <Compile Include="domain\ServiceGraph.fs" />
+        <Compile Include="domain\ServiceNode.fs" />
+        <Compile Include="domain\RequestService.fs" />
         <Compile Include="domain\Request.fs" />
         <Compile Include="domain\Notification.fs" />
+        <Compile Include="data_access\EmbassyGraph.fs" />
         <Compile Include="data_access\Confirmation.fs" />
         <Compile Include="data_access\Appointment.fs" />
         <Compile Include="data_access\ConfirmationOption.fs" />
         <Compile Include="data_access\ConfirmationState.fs" />
         <Compile Include="data_access\ProcessState.fs" />
-        <Compile Include="data_access\Service.fs" />
+        <Compile Include="data_access\RequestService.fs" />
         <Compile Include="data_access\ServiceGraph.fs" />
         <Compile Include="data_access\Request.fs" />
-        <Compile Include="data_access\EmbassyGraph.fs" />
     </ItemGroup>
   
     <ItemGroup>
