--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="domain\RouteGraph.fs" />
+        <Compile Include="domain\RouteNode.fs" />
         <Compile Include="embassies\Russian.fs"/>
         <Compile Include="Initializer.fs"/>
         <Compile Include="Program.fs"/>
