--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -6,7 +6,7 @@
 
     <ItemGroup>
         <Compile Include="services\city.kdmid.ru\domain\Constants.fs" />
-        <Compile Include="services\city.kdmid.ru\domain\Service.fs" />
+        <Compile Include="services\city.kdmid.ru\domain\KdmidRequest.fs" />
         <Compile Include="services\city.kdmid.ru\domain\Order.fs" />
         <Compile Include="services\city.kdmid.ru\domain\Payload.fs" />
         <Compile Include="services\city.kdmid.ru\dependencies\Order.fs" />
@@ -16,8 +16,8 @@
         <Compile Include="services\city.kdmid.ru\web\pages\ValidationPage.fs"/>
         <Compile Include="services\city.kdmid.ru\web\pages\AppointmentsPage.fs"/>
         <Compile Include="services\city.kdmid.ru\web\pages\ConfirmationPage.fs"/>
-        <Compile Include="services\city.kdmid.ru\core\Order.fs"/>
-        <Compile Include="services\info.midpass.ru\Service.fs" />
+        <Compile Include="services\city.kdmid.ru\Order.fs" />
+        <Compile Include="services\info.midpass.ru\domain\MidpassRequest.fs" />
         <Compile Include="domain\Service.fs" />
         <Compile Include="API.fs"/>
     </ItemGroup>
