--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <Compile Include="domain\RouteNode.fs" />
+        <Compile Include="dependencies\Persistence.fs" />
         <Compile Include="dependencies\Russian.fs" />
         <Compile Include="embassies\Russian.fs"/>
         <Compile Include="Initializer.fs"/>
