Add user and embassy handling modules: implement request routing and dependencies for user and embassy services

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -11,9 +11,18 @@
         <Compile Include="dependencies\Persistence.fs" />
         <Compile Include="dependencies\consumer\Consumer.fs" />
         <Compile Include="dependencies\consumer\Russian.fs" />
+        <Compile Include="dependencies\consumer\Services.fs" />
+        <Compile Include="dependencies\consumer\Embassies.fs" />
+        <Compile Include="dependencies\consumer\Users.fs" />
         <Compile Include="dependencies\producer\Producer.fs" />
-        <Compile Include="Command.fs" />
+        <Compile Include="routes\Services.fs" />
+        <Compile Include="routes\Embassies.fs" />
+        <Compile Include="routes\Users.fs" />
+        <Compile Include="routes\Router.fs" />
         <Compile Include="handlers\consumer\Russian.fs" />
+        <Compile Include="handlers\consumer\Services.fs" />
+        <Compile Include="handlers\consumer\Embassies.fs" />
+        <Compile Include="handlers\consumer\Users.fs" />
         <Compile Include="handlers\consumer\Consumer.fs" />
         <Compile Include="handlers\producer\Producer.fs" />
         <Compile Include="Consumer.fs" />
