--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -397,39 +397,43 @@ KdmidRussianServices: &KdmidRussianServices
         Name: Автоматически записаться на слот в указанный период
         <<: *KdmidRussianServicesInstructions
 
-RussianServices:
-  Id: RU
-  Name: Посольство РФ
-  Description: Выберите услугу посольства РФ
+Services:
+  Id: SRV
+  Name: Services
+  Description: Choose a service
   Children:
-    - Id: "1"
-      Name: Паспорт
-      Description: Выберите услугу по паспорту посольства РФ
+    - Id: RU
+      Name: Посольство РФ
+      Description: Выберите услугу посольства РФ
       Children:
-        - Id: "2"
-          Name: Выпуск заграничного паспорта
-          Description: Выберите услугу по выпуску заграничного паспорта посольства РФ
+        - Id: "1"
+          Name: Паспорт
+          Description: Выберите услугу по паспорту посольства РФ
           Children:
-            <<: *KdmidRussianServices
-        - Id: "3"
-          Name: Проверка готовности паспорта
-          Instruction: Что бы воспользоваться услугой, добавьте номер справки, которую вы получили после подачи документов, после символа | в вышеуказанную команду и отправьте ее в чат.
-    - Id: "4"
-      Name: Нотариат
-      Instruction: Что бы воспользоваться услугой, добавьте ссылку, которую вы получили в email при регистрации после символа | в вышеуказанную команду и отправьте ее в чат.
-      Description: Выберите услугу нотариата посольства РФ
-      Children:
-        - Id: "5"
-          Name: Доверенность
-          Description: Выберите услугу доверенности посольства РФ
+            - Id: "2"
+              Name: Выпуск заграничного паспорта
+              Description: Выберите услугу по выпуску заграничного паспорта посольства РФ
+              Children:
+                <<: *KdmidRussianServices
+            - Id: "3"
+              Name: Проверка готовности паспорта
+              Instruction: Что бы воспользоваться услугой, добавьте номер справки, которую вы получили после подачи документов, после символа | в вышеуказанную команду и отправьте ее в чат.
+        - Id: "4"
+          Name: Нотариат
+          Instruction: Что бы воспользоваться услугой, добавьте ссылку, которую вы получили в email при регистрации после символа | в вышеуказанную команду и отправьте ее в чат.
+          Description: Выберите услугу нотариата посольства РФ
           Children:
-            <<: *KdmidRussianServices
-    - Id: "6"
-      Name: Гражданство
-      Description: Выберите услугу гражданства посольства РФ
-      Children:
-        - Id: "7"
-          Name: Отказ от гражданства
-          Description: Выберите услугу отказа от гражданства посольства РФ
+            - Id: "5"
+              Name: Доверенность
+              Description: Выберите услугу доверенности посольства РФ
+              Children:
+                <<: *KdmidRussianServices
+        - Id: "6"
+          Name: Гражданство
+          Description: Выберите услугу гражданства посольства РФ
           Children:
-            <<: *KdmidRussianServices
+            - Id: "7"
+              Name: Отказ от гражданства
+              Description: Выберите услугу отказа от гражданства посольства РФ
+              Children:
+                <<: *KdmidRussianServices
