--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -9,22 +9,22 @@
         <Compile Include="domain\Chat.fs" />
         <Compile Include="data_access\Chat.fs" />
         <Compile Include="dependencies\Persistence.fs" />
-        <Compile Include="consumer\dependencies\Core.fs" />
-        <Compile Include="consumer\dependencies\RussianEmbassy.fs" />
-        <Compile Include="consumer\dependencies\Embassies.fs" />
-        <Compile Include="consumer\dependencies\Users.fs" />
-        <Compile Include="consumer\endpoints\RussianEmbassy.fs" />
-        <Compile Include="consumer\endpoints\Embassies.fs" />
-        <Compile Include="consumer\endpoints\Users.fs" />
-        <Compile Include="consumer\endpoints\Core.fs" />
-        <Compile Include="consumer\handlers\RussianEmbassy.fs" />
-        <Compile Include="consumer\handlers\Embassies.fs" />
-        <Compile Include="consumer\handlers\Users.fs" />
-        <Compile Include="consumer\Core.fs" />
-        <Compile Include="producer\dependencies\Core.fs" />
-        <Folder Include="producer\endpoints\" />
-        <Compile Include="producer\handlers\Core.fs" />
-        <Compile Include="producer\Core.fs" />
+        <Compile Include="dependencies\consumer\Core.fs" />
+        <Compile Include="dependencies\consumer\embassies\Russian.fs" />
+        <Compile Include="dependencies\consumer\embassies\Core.fs" />
+        <Compile Include="dependencies\consumer\Users.fs" />
+        <Compile Include="dependencies\producer\Core.fs" />
+        <Compile Include="endpoints\consumer\Users.fs" />
+        <Compile Include="endpoints\consumer\embassies\Core.fs" />
+        <Compile Include="endpoints\consumer\embassies\Russian.fs" />
+        <Compile Include="endpoints\consumer\Core.fs" />
+        <Folder Include="endpoints\producer\" />
+        <Compile Include="handlers\consumer\embassies\Russian.fs" />
+        <Compile Include="handlers\consumer\embassies\Core.fs" />
+        <Compile Include="handlers\consumer\Users.fs" />
+        <Compile Include="handlers\producer\Core.fs" />
+        <Compile Include="Consumer.fs" />
+        <Compile Include="Producer.fs" />
     </ItemGroup>
 
     <ItemGroup>
