Add test.json file and include it in the project

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -32,4 +32,8 @@
         <ProjectReference Include="..\embassy-access-modules\embassy-access-modules-russian\embassy-access-modules-russian.fsproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="test.json" />
+    </ItemGroup>
+
 </Project>
