Add SubscriptionState and Chats.json; refactor ProcessState and related logic

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -5,7 +5,7 @@ Logging:
     Default: Debug
 
 Persistence:
-  FileSystem: C:\
+  FileSystem: ../../../data
 
 SearchAppointments: &SearchAppointments
   - Name: Search appointments
