Add Constants module for Telegram bot token and refactor dependencies for improved structure

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="domain\Constants.fs" />
         <Compile Include="domain\RouteNode.fs" />
         <Compile Include="dependencies\Persistence.fs" />
         <Compile Include="dependencies\Russian.fs" />
