--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <Compile Include="domain\Constants.fs" />
         <Compile Include="domain\RouteNode.fs" />
+        <Compile Include="dependencies\Web.fs" />
         <Compile Include="dependencies\Persistence.fs" />
         <Compile Include="dependencies\Russian.fs" />
         <Compile Include="embassies\Russian.fs"/>
